--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.1.0",
     "lucide-react": "^0.468.0",
     "motion": "^11.14.4",
     "react": "^18.3.1",
